@@ -13,13 +13,14 @@ class PinPaiTuan(models.Model):
     
     outer_id = models.CharField(max_length=64,blank=True,db_index=True,verbose_name="商品外部编码")
     outer_sku_id = models.CharField(max_length=64,blank=True,db_index=True,verbose_name="规格外部编码")
+    prod_sku_name = models.CharField(max_length=128,blank=True,db_index=True,verbose_name="商品规格名称")
     
     class Meta:
         db_table = 'shop_juhuasuan_pinpaituan'
         verbose_name='品牌团入仓商品'
-
+    
     def __unicode__(self):
-        return '<%s,%s>'%(self.outer_id,self.outer_sku_id)
+        return '<%s,%s,%s>'%(self.outer_id,self.outer_sku_id,self.prod_sku_name)
     
     
 def order_match_juhuasuan_pinpaituan(sender, trade_id, *args, **kwargs):
@@ -30,23 +31,21 @@ def order_match_juhuasuan_pinpaituan(sender, trade_id, *args, **kwargs):
     
     full_match = False
     real_pay_orders = mergetrade.merge_trade_orders.filter(gift_type=pcfg.REAL_ORDER_GIT_TYPE)
-
+    
     for order in real_pay_orders:
-
         try:
             PinPaiTuan.objects.get(outer_id=order.outer_id,outer_sku_id=order.outer_sku_id)
         except:
-            full_match = False
-            break
+            full_match &= False
         else:
-            full_match = True
+            full_match &= True
        
     if full_match:
-        mergetrade.append_reason_code(pcfg.RULE_MATCH_CODE)
-        raise Exception('has juhuasuan pinpaituan')
+        
+        raise Exception('订单满足需聚划算入仓')
+
     
-    
-rule_signal.connect(order_match_juhuasuan_pinpaituan,sender='product_rule',dispatch_uid='rule_match_juhuasuan_pinpaituan')
+rule_signal.connect(order_match_juhuasuan_pinpaituan,sender='ju_hua_suan',dispatch_uid='rule_match_juhuasuan_pinpaituan')
     
     
     
