@@ -1,3 +1,5 @@
+######### 2013-5-09 ###########
+alter table shop_juhuasuan_pinpaituan add column prod_sku_name varchar(128) NOT NULL;
 ######### 2013-5-28 ###########
 alter table shop_orders_trade add column send_time datetime DEFAULT NULL;
 alter table shop_orders_trade add column is_brand_sale tinyint(1) NOT NULL;
